// Copyright 2020 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Storage with keys and values represented as bytes arrays.

syntax = "proto3";

package exonum;

option java_package = "com.exonum.messages.core";

// Some non-scalar key-value pair.
message KeyValue {
  string key = 1;
  bytes value = 2;
}

// A sequence of key-value pairs.
message KeyValueSequence {
  repeated KeyValue entries = 1;
}
